--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,3 @@
 {
-   
-    "routes": [
-      { "src": "/(.*)", "dest": "/index.php" }
-    ]
-  }
-  
+  "routes": [{ "src": "/(.*)", "dest": "/index.php" }]
+}
