--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,6 @@
 {
+  "functions": {
+    "index.php": { "runtime": "vercel-php@0.6.0" }
+  },
   "routes": [{ "src": "/(.*)", "dest": "/index.php" }]
 }
