Some Minor Changes for vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
-  "functions": {
-    "index.php": { "runtime": "vercel-php@0.6.0" }
-  },
-  "routes": [{ "src": "/(.*)", "dest": "/index.php" }]
-}
+    "functions": {
+      "*.php": { "runtime": "vercel-php@0.6.0" }
+    },
+    "routes": [
+      { "src": "/(.*)", "dest": "/index.php" }
+    ]
+  }
+  
