--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "functions": {
-      "*.php": { "runtime": "vercel-php@0.6.0" }
+      "api/index.php": { "runtime": "vercel-php@0.6.0" }
     },
     "routes": [
       { "src": "/(.*)", "dest": "/index.php" }
